--- a/app.yaml
+++ b/app.yaml
@@ -20,6 +20,9 @@ handlers:
   static_files: favicon.ico
   upload: favicon\.ico
 
+- url: /api/records/.*  # TODO: Make api.py?
+  script: server.record.handler.app  # TODO: Better naming convention?  handler is weird?
+
 - url: .*
   script: server.main.app
 
